(include_subdirs unqualified)(env (dev (flags (:standard -warn-error -69-37-34-33-27-32-26-66))))
(library
(name bloomfilter)
 (libraries containers eio_main eio domainslib base batteries)
 (modules cyclicbarrier interval_tree dpll bloomfilter_rocksdb murmurhash plassknuth bloomfilter splaytree splaytree_f rmq btree btree_variant)
)
