(library
 (name bloomfilter_test)
 (libraries bloomfilter eio eio_main batteries)
 (inline_tests)
 (preprocess (pps ppx_inline_test  ppx_assert ppx_expect ))
 (modules abstract_interpreter_test yfasttrie_test interval_test cyclicbarrier_test murmurhash_test plassknuth_test dpll_test bloomfilter_test splaytree_test brc_test))
